--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@ body {
   padding: 0;
   margin: 0;
   /* background-color: #80A0ff */
+  /* border: 2px solid black; */
+  scrollbar-width: 0px;
+  display: flex;
+  width: 100vw
 }
 
 
@@ -16,7 +20,9 @@ body {
   padding: 0;
   box-sizing: border-box;
   transition: all ease 500ms;
-  font-family: "montserrat"
+  font-family: "montserrat";
+  scrollbar-width: 0;
+
 }
 
 *::-webkit-scrollbar{
