--- a/styles/menu.module.css
+++ b/styles/menu.module.css
@@ -58,7 +58,7 @@
 
 @media only screen and (max-width: 700px){
     .menu{
-    width: 100vw;
+    width: 60vw;
     height: calc(100vh - 40px);
     position: fixed;
     bottom: 0;
@@ -70,6 +70,16 @@
     align-items: center;
     flex-direction: column;
     z-index: 4;
+}
+
+.menuDiv > h1{
+    color: black;
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.ChevronUpIcon{
+    width: 2rem;
 }
 
 }
