--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -56,3 +56,17 @@
     transform-origin: left;
     transition: all ease 500ms;
 }
+
+@media only screen and (max-width: 700px){
+    .hamburger{
+        width: 25px;
+        height: 25px;
+        /* border: 1px solid white; */
+        display: flex;
+        justify-content: space-around;
+        align-items: flex-end;
+        flex-direction: column;
+        cursor: pointer;
+        transition: all ease 500ms;
+    }
+}
